--- a/betterkorean/build.gradle
+++ b/betterkorean/build.gradle
@@ -1,21 +1,54 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.kaijung.betterkorean'
+version = '0.8.1'
+
+
+task generateSourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier 'sources'
+}
+
+artifacts {
+    archives generateSourcesJar
+}
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+
+    pkg {
+        repo = "maven"
+        name = "betterkorean"
+        websiteUrl = 'https://github.com/n42corp/betterkorean'
+        vcsUrl = 'https://github.com/n42corp/betterkorean.git'
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
+    configurations = ['archives']
+}
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 8
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+
+    lintOptions {
+        abortOnError false
     }
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
