--- a/betterkorean/src/main/AndroidManifest.xml
+++ b/betterkorean/src/main/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kaijung.betterkorean">
 
-    <application
-        android:allowBackup="true"
-        android:label="@string/sample_app_name"
-        android:supportsRtl="true">
-
-    </application>
+    <application/>
 
 </manifest>
